--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/cyf1fcn.css">
-
+<link rel="stylesheet" href="https://use.typekit.net/mmi4iao.css">
 
     <!-- Set a page title -->
     <title>Contact Me</title>
@@ -19,66 +19,50 @@
     <!-- Start coding here! -->
 
 <!--Borders-->
-    <div id="left" class="contact-page"></div>
-    <div id="right" class="contact-page"></div>
-    <div id="top" class="contact-page"></div>
-    <div id="bottom" class="contact-page"></div>
+    <div id="left" class="front-page"></div>
+    <div id="right" class="front-page"></div>
+    <div id="top" class="front-page"></div>
+    <div id="bottom" class="front-page"></div>
 
 
-<!--HEADER/NAV-->
+
+    <!--HEADER/NAV-->
+
+    <div class="pb0-ns pb3 flex flex-column">
+
+        <div class="flex flex-row justify-around items-center pt5 ph5 pb3">
+
+            <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+
+            <div><a href="index.html"> <img class="logo" src="images/logo-mint.png" alt="cb logo">
+            </a></div>
+
+            <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
+        </div>
 
 
-<div class="flex flex-row-ns flex-column justify-between items-center tc tiptop">
 
-    <div>
-    <a href="index.html"><img class="logo" src="images/logo-blue.png" alt="cb logo">
-    </a>
-    </div>
+<!--MAIN-->
 
-    <div class="navigate flex flex-row-ns flex-column justify-end ttu tracked">
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns home" href="index.html">home</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns projects" href="projects.html">projects</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns about" href="about.html">about</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns contact" href="contact.html">contact</a>
-    </div>
-
-</div>
+<!--INTRO-->
 
 
-<!--header-->
-
-<h1 class="ph5-ns pv0 f2 ttu fw5 tracked tc mv0">contact</h1>
-
-<!--main title-->
-<div class="flex flex-row-ns flex-column ph5-l ph1-m mb5 items-center">
-
-  <div class="w-75 colortwo mv4">
-    <img class="ph6-l ph5-m pt3" src="images/bigface.png" alt="drawing of me">
-  </div>
-
-<div class="w-25 ph5-ns ph3 pv4-ns flex flex-column">
-<a class="link black" href="#">email</a>
-<a class="link black" href="#">email</a>
-<a class="link black" href="#">email</a>
-<a class="link black" href="#">email</a>
-<a class="link black" href="#">email</a>
-</div>
+<div class="ph6-ns ph4 flex flex-column pb4 tc">
+    <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">about me</span></h2>
+  <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book">Hi, my name is Casey and I am currently a graduate graphic design student at Boston University. Prior to starting this program, I worked as a dietitian. While I appreciated the experience and the profession, I quickly realized that it wasn't the job for me. I wanted to create, to build, to design - things I have always loved to do. After work, I began learning how to use design software and started to create more and more projects on my own. I was desperate for a change in my career and I knew that graphic design was what I wanted to do. Determined and enthusiastic, I decided to make the change. During my time as a design student, I have already gained many valuable skills that have made me a stronger designer. I am excited to continue to expand my knowledge and develop my skills. Thank you for visiting my portfolio! </p></div>
 
 
+  <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">contact me</span></h2>
+<div class="ph6-ns"><p class="f5 pt1 lh-copy tc ph4-ns book"><a class="link black" href="mailto:caseybowser10@gmail.com">caseybowser10@gmail.com</a></p></div>
 
 </div>
 
-<!--FOOTER-->
 
-<footer class="pb4 pt6-ns pt3">
-  <div class="flex flex-row-ns ttu tracked justify-center bt pt4 items-center">
-  <a class="link black ph3 pv3 pv0-ns f7 home" href="index.html">home</a>
-  <a class="link black ph3 pv3 pv0-ns f7 projects" href="projects.html">projects</a>
-  <a class="link black ph3 pv3 pv0-ns f7 about" href="about.html">about</a>
-  <a class="link black ph3 pv3 pv0-ns f7 contact" href="contact.html">contact</a>
-</div>
 
-</footer>
+
+
+
+
 
 
 <!-- Site JavaScript -->
