--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/cyf1fcn.css">
+<link rel="stylesheet" href="https://use.typekit.net/mmi4iao.css">
+
+
 
 
     <!-- Set a page title -->
@@ -19,51 +22,177 @@
     <!-- Start coding here! -->
 
 <!--Borders-->
-    <div id="left" class="front-page"></div>
-    <div id="right" class="front-page"></div>
-    <div id="top" class="front-page"></div>
-    <div id="bottom" class="front-page"></div>
+    <div id="left" class="single-page"></div>
+    <div id="right" class="single-page"></div>
+    <div id="top" class="single-page"></div>
+    <div id="bottom" class="single-page"></div>
+
+
+
 
 
 <!--HEADER/NAV-->
 
+<div class="pb5 flex flex-column">
 
-<div class="flex flex-row-ns flex-column justify-between items-center tc tiptop">
+    <div class="flex flex-row justify-around items-center pt5 ph5 pb3">
 
-    <div>
+        <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+
+        <div><a href="index.html"> <img class="logo" src="images/logo-black.png" alt="cb logo">
+        </a></div>
+
+        <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
+    </div>
+
+  <div class="pb2">
+      <div class="tc items-center"> <h1 class="f3 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
+      <div class="tc items-center pt2"> <h2 class="f5 ma0 gray light">graphic designer</h2></div>
+
+  </div>
+</div>
+
+
+
+
+
+
+<!--<div class="tc pt5 pb3">
+<a href="index.html"> <img class="logo" src="images/logo-mint.png" alt="cb logo">
+</a></div>
+
+  <div class="tc items-center"> <h1 class="name fw4 f4 ma0 ttu tracked">casey bowser </h1> </div>
+
+<div class="ph7-ns flex flex-row-ns flex-column tc justify-around-ns pt5-ns">
+  <div class="fw3 f5 underline"><p>work</p></div>
+  <div class="fw3 f5 underline"><p>info</p>
+
+  </div>
+
+</div>-->
+
+
+
+  <!-- <div class="flex flex-row-ns flex-column justify-between items-center tc tiptop">
+
+   <div>
   <a href="index.html"> <img class="logo" src="images/logo-mint.png" alt="cb logo">
   </a></div>
 
+
     <div class="navigate flex flex-row-ns flex-column justify-end ttu tracked">
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns home" href="index.html">home</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns projects" href="projects.html">projects</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns about" href="about.html">about</a>
+    <a class="link black ph3 pv3 pv0-ns f4 f6-ns projects" href="#projects">projects</a>
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns contact" href="contact.html">contact</a>
-    </div>
+  </div>
 
-</div>
+</div>-->
 
 
-<!--main title-->
+
+<!--main title
 <div class="ph6-ns ph3 flex flex-column">
-      <h1 class="pt3-ns f2-ns f3 tl-ns tc fw5"> <span class="casey ph2">hi, my name is casey...</span></h1>
-      <h2 class="f-headline-ns f3 mt6-ns mt0 mb6 tr-ns tc"> & i&#8217;m a graphic designer </h2>
-</div>
+      <h1 class="pt3-ns f2-ns f4 tl fw5"> <span class="casey ph2">hi, my name is casey...</span></h1>
+      <h2 class="f-headline-ns f2 mt6-ns mt0 mb0 tr-ns tl pt3"> & i&#8217;m a graphic designer </h2>
+      <div class="flex flex-row justify-end">
+        <div class="w-50-ns w-0"></div>
+        <div class="w-25-l w-100"><p>I am currently a graduate student in the Graphic Design program at Boston University. I previously worked as a dietitian. </p></div>
+      </div>
+
+
+</div>-->
+
+
 
 
 <!--INTRO-->
 
-<div class="flex flex-row-ns flex-column justify-between h5">
+<!--<div class="flex flex-row-ns flex-column justify-between h5">
 
-<div class="test w-50">
-
+<div class="w-50">
 <h2 class="ph6 f3 tr">welcome to my porfolio</h2>
 <p class="ph6 f3 tr">hello</p>
 </div>
 
-<div class="w-50 test">
 
-</div>
+</div>-->
+
+<!--MY PROJECTS
+    <a name="projects" href="#"></a>  <div class="w-50"><h2 class="pt3-ns f2-ns f3 tr fw5"> <span class="casey ph2">my projects...</span></h2></div>-->
+
+
+<!--PROJECTS FIRST VERSION
+
+
+
+<div class="flex flex-row-ns flex-column justify-around pa4 ph5-ns pv5-ns bg-black-05">
+
+
+    <div class="flex-column w-30-ns w-100 pa3-ns">
+        <div class="pb3"><a href="robot.html" class="dim db no-underline"><img class="pv2" src="images/robot.png" alt="robot poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
+
+        <div class="pb3"><a href="mfa.html" class="dim db no-underline">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"><p class="ma0 light ttu gray f5 mt0 ">collaborative rebrand</p></a></div>
+
+        <div class="pb3"><a href="#" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
+    </div>
+
+
+
+    <div class="flex-column w-40-ns w-100 pa3-ns">
+          <div class="pb3"><a href="pasta.html" class="dim db no-underline">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"><p class="ma0 light ttu gray f5 mt0 ">a poster of firsts</p></a></div>
+
+          <div class="pb3"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
+    </div>
+
+
+
+    <div class="flex-column w-30-ns w-100 pa3-ns">
+
+          <div class="pb3"><a href="lola.html" class="dim db no-underline"><img class="pv2" src="images/lola-sweatshirt.png" alt="lola website"><p class="ma0 light ttu gray f5 mt0 ">web design</p></a></div>
+
+
+          <div class="pb3"><a href="editorial.html" class="dim db no-underline"><img class="pv2" src="images/book-1.jpg" alt="book"><p class="ma0 light ttu gray f5 mt0 ">editorial design</p></a></div>
+
+          <div class="pb4"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>
+
+    </div>
+
+
+</div>-->
+
+
+
+
+<!--TEST-->
+
+<div class="flex flex-row-ns flex-column justify-around ph6-ns pv4-ns pa4 bg-black-05">
+
+
+    <div class="flex-column w-40-ns w-100 pa3-ns">
+        <div class="pb3"><a href="robot.html" class="dim db no-underline"><img class="pv2" src="images/robot.png" alt="robot poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
+
+
+
+  <div class="pb3"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
+
+
+            <div class="pb3"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>
+    </div>
+
+
+
+    <div class="flex-column w-60-ns w-100 pa3-ns">
+          <div class="pb3"><a href="pasta.html" class="dim db no-underline">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"><p class="ma0 light ttu gray f5 mt0 ">a poster of firsts</p></a></div>
+
+  <div class="pb3 tc"><a href="lola.html" class="dim db no-underline"><img class="pv2" src="images/lola-sweatshirt.png" alt="lola website"><p class="tl ma0 light ttu gray f5 mt0 ">web design</p></a></div>
+
+                <div class="pb3"><a href="editorial.html" class="dim db no-underline"><img class="pv2" src="images/book-1.jpg" alt="book"><p class="ma0 light ttu gray f5 mt0 ">editorial design</p></a></div>
+
+                  <div class="pb3"><a href="mfa.html" class="dim db no-underline">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"><p class="ma0 light ttu gray f5 mt0 ">collaborative rebrand</p></a></div>
+    </div>
+
+
+
 
 </div>
 
@@ -81,12 +210,9 @@
 
 <!--FOOTER-->
 
-<footer class="pb4 pt6">
-  <div class="flex flex-row-ns ttu tracked justify-center bt pt4 items-center">
-  <a class="link black ph3 pv3 pv0-ns f7 home" href="index.html">home</a>
-  <a class="link black ph3 pv3 pv0-ns f7 projects" href="projects.html">projects</a>
-  <a class="link black ph3 pv3 pv0-ns f7 about" href="about.html">about</a>
-  <a class="link black ph3 pv3 pv0-ns f7 contact" href="contact.html">contact</a>
+<footer class="pb4">
+  <div class="flex flex-row-ns ttu tracked justify-center pt4 items-center">
+    <a class="link black f6 medium" href="mailto:caseybowser10@gmail.com">caseybowser10@gmail.com</a>
   </div>
 </footer>
 
