--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,8 @@
 <!--HEADER/NAV-->
 
 
+
+
 <div class="flex flex-row-ns flex-column justify-between items-center tc tiptop">
 
     <div>
@@ -37,7 +39,6 @@
     <div class="navigate flex flex-row-ns flex-column justify-end ttu tracked">
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns home" href="index.html">home</a>
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns projects" href="projects.html">projects</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns about" href="about.html">about</a>
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns contact" href="contact.html">contact</a>
     </div>
 
@@ -47,34 +48,64 @@
 
 
 <!--header-->
-
+<!--
 <h1 class="ph5-ns pv0 f2 ttu fw5 tracked tc mv0">projects</h1>
-
-
+-->
 
 <!--PROJECTS-->
 
-<div class="flex flex-column items-center pa3">
 
-<div class="flex flex-row">
 
-  <div class="pa3"> <img src="images/pasta-poster.png" alt="pasta poster"> </div>
-  <div class="pa3 w-50"> <img class="" src="images/robot.png" alt="pasta poster"> </div>
 
+<div class="flex flex-column ph5">
+
+<div class="flex flex-row-ns flex-column items-start-ns items-center">
+
+  <div class="w-75 w-50-l pl3 pt2-ns">
+  <h2 class="colorthree pa3">projects</h2>
+  </div>
+
+  <div class="w-50-l w-75">
+  </div>
+
+</div>
+</div>
+
+
+<!--images-->
+
+
+
+
+<div class="flex flex-row-ns flex-column justify-around">
+
+  <div class="flex-column w-30-ns w-100 pa2-ns">
+    <a href="robot.html" class="grow db">
+      <img class="pv2" src="images/robot.png" alt="robot poster"></a>
+<a href="mfa.html" class="grow db">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"></a>
+
+
+  </div>
+
+  <div class="flex-column w-40-ns w-100 pa2-ns">
+
+    <a href="editorial.html" class="grow db"><img class="pv2" src="images/book-1.jpg" alt="book"></a>
+      <a href="hydrogen.html" class="grow db"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"></a>
+  </div>
+
+  <div class="flex-column w-30-ns w-100 pa2-ns">
+    <a href="pasta.html" class="grow db">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"> </a>
+
+  <a href="lola.html" class="grow db"><img class="pv2" src="images/lola.png" alt="lola website"></a>
+
+      <a href="leo.html" class="grow db"> <img class="pv2" src="images/leo2.png" alt="leo poster"> </a>
+
+
+
+  </div>
 
 </div>
 
-<div class="flex flex-row">
-
-  <div class="pa3 w-50"> <img src="images/leo2.png" alt="pasta poster"></div>
-
-  <video controls loop src="lola-weather.mov" width="700" height="500" autoplay poster="weather-site.png">
-
-  </video>
-
-</div>
-
-</div>
 
 <!--FOOTER-->
 
@@ -82,7 +113,6 @@
   <div class="flex flex-row-ns ttu tracked justify-center bt pt4 items-center">
   <a class="link black ph3 pv3 pv0-ns f7 home" href="index.html">home</a>
   <a class="link black ph3 pv3 pv0-ns f7 projects" href="projects.html">projects</a>
-  <a class="link black ph3 pv3 pv0-ns f7 about" href="about.html">about</a>
   <a class="link black ph3 pv3 pv0-ns f7 contact" href="contact.html">contact</a>
 </div>
 
