--- a/about.html
+++ b/about.html
@@ -39,7 +39,6 @@
     <div class="navigate flex flex-row-ns flex-column justify-end ttu tracked">
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns home" href="index.html">home</a>
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns projects" href="projects.html">projects</a>
-    <a class="link black ph3 pv3 pv0-ns f4 f6-ns about" href="about.html">about</a>
     <a class="link black ph3 pv3 pv0-ns f4 f6-ns contact" href="contact.html">contact</a>
     </div>
 
@@ -52,18 +51,25 @@
 
 
 <!--main title-->
-<div class="flex flex-row-ns flex-column ph5-l ph1-m mb5 items-start-ns items-center">
 
-<div class="w-75 w-50-l ph5-ns ph3 pv4-ns">
-  <h2 class="">Fast Facts</h2>
+<article class="ph5">
+
+<div class="flex flex-row-ns flex-column items-start-ns items-center">
+
+<div class="w-75 w-50-l ph4-ns ph3 pv4-ns">
+  <h2 class="colorfour pa3">about me</h2>
   <p class="f5"> I am a graphic designer hometown: wellesley ma Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 </div>
 
 <div class="w-50-l w-75">
-  <img class="ph6-l ph5-m pt3" src="images/bigface.png" alt="drawing of me">
+  <img class="ph6-l ph5-m pt3" src="images/trippy.jpg" alt="trippy image">
 </div>
 
 </div>
+
+</article>
+
+<!--FOOTER-->
 
 <footer class="pb4 pt6-ns pt3">
   <div class="flex flex-row-ns ttu tracked justify-center bt pt4 items-center">
