--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="pb5 flex flex-column">
 
-    <div class="flex flex-row justify-around items-center pt5 ph5 pb3">
+    <div class="flex flex-row-ns flex-column justify-around items-center pt5 ph5 pb3">
 
         <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
