--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="pb5 flex flex-column">
 
-    <div class="flex flex-row-ns flex-column justify-around items-center pt5 ph5 pb3">
+    <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
         <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
@@ -46,7 +46,7 @@
     </div>
 
   <div class="pb2">
-      <div class="tc items-center"> <h1 class="f3 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
+      <div class="tc items-center"> <h1 class="f3-ns f5 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
       <div class="tc items-center pt2"> <h2 class="f5 ma0 gray light">graphic designer</h2></div>
 
   </div>
