--- a/editorial.html
+++ b/editorial.html
@@ -30,9 +30,9 @@
 
     <!--HEADER/NAV-->
 
-    <div class="pb0-ns pb3 flex flex-column">
+    <div class="pb5 flex flex-column">
 
-        <div class="flex flex-row justify-around items-center pt5 ph5 pb3">
+        <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
             <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
@@ -41,8 +41,6 @@
 
             <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
         </div>
-
-    </div>
 
 
     <!--INTRO-->
