--- a/leo.html
+++ b/leo.html
@@ -57,7 +57,7 @@
 
         <!--NEXT PROJECT-->
 
-        <div class="flex flex-row-ns flex-column tc ph6 pb5 justify-around">
+        <div class="flex flex-row-ns flex-column tc ph6-ns pb5 justify-around">
 
           <div class=""> <a class="link no-underline" href="index.html">
           <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
