--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,13 @@
 
     <!--HEADER/NAV-->
 
-    <div class="pb5 flex flex-column">
+    <!--HEADER/NAV-->
+
+    <div class="pb0 flex flex-column">
 
         <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
-            <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+        <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
             <div><a href="index.html"> <img class="logo" src="images/logo-mint.png" alt="cb logo">
             </a></div>
@@ -40,6 +42,7 @@
             <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
         </div>
 
+      </div>
 
 <!--MAIN-->
 
