--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
-        <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+        <div class=""> <a class="no-underline link" href="#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
         <div><a href="index.html"> <img class="logo" src="images/logo-black.png" alt="cb logo">
         </a></div>
@@ -164,7 +164,7 @@
 
 
 <!--TEST-->
-
+<a name="work"></a>
 <div class="flex flex-row-ns flex-column justify-around ph6-ns pv4-ns pa4 bg-black-05">
 
 
