--- a/lola.html
+++ b/lola.html
@@ -30,17 +30,19 @@
 
     <!--HEADER/NAV-->
 
-    <div class="pb5 flex flex-column">
+    <div class="pb0 flex flex-column">
 
         <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
-            <div class=""> <a class="no-underline link" href="index.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+            <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
             <div><a href="index.html"> <img class="logo" src="images/logo-black.png" alt="cb logo">
             </a></div>
 
             <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
         </div>
+
+      </div>
 
 
 
@@ -74,7 +76,7 @@
 
     <div class="flex flex-row-ns flex-column tc ph6-ns pb5 justify-around">
 
-      <div class=""> <a class="link no-underline" href="index.html">
+    <div class=""> <a class="link no-underline" href="index.html#work">
       <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
       </div>
 
