opening lola in new window

--- a/lola.html
+++ b/lola.html
@@ -52,7 +52,7 @@
 
         <div class="ph6-ns ph4 flex flex-column pb3-ns tc">
             <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">Lola Weather App</span></h2>
-          <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book">For this interactive design class assignment, we had to create a unique and responsive weather forecasting site. Using my family's pug, Lola, as the subject of my site, I created a series of illustrations depicting her wearing various weather specific outfits. In addition, I added simple animations to make the site fun and surprising. <a class="black" href="https://cbweather.netlify.com/index.html">Visit the site here.</a> </p></div>
+          <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book">For this interactive design class assignment, we had to create a unique and responsive weather forecasting site. Using my family's pug, Lola, as the subject of my site, I created a series of illustrations depicting her wearing various weather specific outfits. In addition, I added simple animations to make the site fun and surprising. <a class="black" href="https://cbweather.netlify.com/index.html" target="_blank">Visit the site here.</a> </p></div>
 
         </div>
         <div class="tc"><video class="" controls loop src="lola-weather.mov" width="500" height="400" autoplay poster="weather-site.png">  </video></div>
