--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
   <div class="pb2">
       <div class="tc items-center"> <h1 class="f3-ns f5 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
-      <div class="tc items-center pt2"> <h2 class="f5 ma0 gray light">graphic designer</h2></div>
+      <div class="tc items-center pt2"> <h2 class="f5 ma0 gray light">welcome to my portfolio</h2></div>
+
 
   </div>
 </div>
@@ -174,6 +175,8 @@
 
 
   <div class="pb3"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
+
+  <div class="pb3"><a href="survival.html" class="dim db no-underline"> <img class="pv2" src="images/group-1.png" alt="group book"> <p class="ma0 light ttu gray f5 mt0 ">collaborative book</p></a></div>
 
 
             <div class="pb3"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>
