--- a/editorial.html
+++ b/editorial.html
@@ -74,7 +74,7 @@
       <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
       </div>
 
-      <div class=""><a class="link no-underline" href="hydrogen.html">
+      <div class=""><a class="link no-underline" href="mfa.html">
       <h3 class="ttu tracked f7 medium black"><span class="bb">next project</span></h3></a>
       </div>
     </div>
