--- a/leo.html
+++ b/leo.html
@@ -65,7 +65,7 @@
           <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
           </div>
 
-          <div class=""><a class="link no-underline" href="robot.html">
+          <div class=""><a class="link no-underline" href="survival.html">
           <h3 class="ttu tracked f7 medium black"><span class="bb">next project</span></h3></a>
           </div>
         </div>
