Adding two new projects

--- a/hydrogen.html
+++ b/hydrogen.html
@@ -69,7 +69,7 @@
           <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
           </div>
 
-          <div class=""><a class="link no-underline" href="robot.html">
+          <div class=""><a class="link no-underline" href="editorial.html">
           <h3 class="ttu tracked f7 medium black"><span class="bb">next project</span></h3></a>
           </div>
         </div>
