--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
 
   <div class="pb2">
-      <div class="tc items-center"> <h1 class="f3-ns f5 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
-      <div class="tc items-center pt2"> <h2 class="f5 ma0 gray light">welcome to my portfolio</h2></div>
+      <div class="tc items-center"> <h1 class="f3 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
+      <div class="tc items-center pt2"> <h2 class="f4 ma0 gray light">welcome to my portfolio</h2></div>
 
 
   </div>
@@ -106,60 +106,6 @@
 
 
 
-<!--INTRO-->
-
-<!--<div class="flex flex-row-ns flex-column justify-between h5">
-
-<div class="w-50">
-<h2 class="ph6 f3 tr">welcome to my porfolio</h2>
-<p class="ph6 f3 tr">hello</p>
-</div>
-
-
-</div>-->
-
-<!--MY PROJECTS
-    <a name="projects" href="#"></a>  <div class="w-50"><h2 class="pt3-ns f2-ns f3 tr fw5"> <span class="casey ph2">my projects...</span></h2></div>-->
-
-
-<!--PROJECTS FIRST VERSION
-
-
-
-<div class="flex flex-row-ns flex-column justify-around pa4 ph5-ns pv5-ns bg-black-05">
-
-
-    <div class="flex-column w-30-ns w-100 pa3-ns">
-        <div class="pb3"><a href="robot.html" class="dim db no-underline"><img class="pv2" src="images/robot.png" alt="robot poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
-
-        <div class="pb3"><a href="mfa.html" class="dim db no-underline">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"><p class="ma0 light ttu gray f5 mt0 ">collaborative rebrand</p></a></div>
-
-        <div class="pb3"><a href="#" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
-    </div>
-
-
-
-    <div class="flex-column w-40-ns w-100 pa3-ns">
-          <div class="pb3"><a href="pasta.html" class="dim db no-underline">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"><p class="ma0 light ttu gray f5 mt0 ">a poster of firsts</p></a></div>
-
-          <div class="pb3"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
-    </div>
-
-
-
-    <div class="flex-column w-30-ns w-100 pa3-ns">
-
-          <div class="pb3"><a href="lola.html" class="dim db no-underline"><img class="pv2" src="images/lola-sweatshirt.png" alt="lola website"><p class="ma0 light ttu gray f5 mt0 ">web design</p></a></div>
-
-
-          <div class="pb3"><a href="editorial.html" class="dim db no-underline"><img class="pv2" src="images/book-1.jpg" alt="book"><p class="ma0 light ttu gray f5 mt0 ">editorial design</p></a></div>
-
-          <div class="pb4"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>
-
-    </div>
-
-
-</div>-->
 
 
 
@@ -169,29 +115,39 @@
 <div class="flex flex-row-ns flex-column justify-around ph6-ns pv4-ns pa4 bg-black-05">
 
 
-    <div class="flex-column w-40-ns w-100 pa3-ns">
-        <div class="pb3"><a href="robot.html" class="dim db no-underline"><img class="pv2" src="images/robot.png" alt="robot poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics poster</p></a></div>
+    <div class="flex flex-column w-40-ns w-100 pa3-ns justify-between">
+        <div class="pb4"><a href="robot.html" class="dim db no-underline"><img class="pv2" src="images/robot.png" alt="robot poster"><p class="ma0 light ttu gray f5 mt0 ">ai/robotics and climate change posters</p></a></div>
+
+<div class="pb4"><a href="lola.html" class="dim db no-underline"><img class="pv2" src="images/lola-sweatshirt.png" alt="lola"><p class="ma0 light ttu gray f5 mt0 ">web design</p></a></div>
+
+  <div class="pb4"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
+
+  <div class="pb4"><a href="survival.html" class="dim db no-underline"> <img class="pv2" src="images/group-1.png" alt="group book"> <p class="ma0 light ttu gray f5 mt0 ">collaborative book</p></a></div>
 
 
+        <!--    <div class="pb3"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>-->
 
-  <div class="pb3"><a href="hydrogen.html" class="dim db no-underline"><img class="pv2" src="images/hydrogen-100.jpg" alt="hydrogen poster"><p class="ma0 light ttu gray f5 mt0 ">educational poster</p></a></div>
-
-  <div class="pb3"><a href="survival.html" class="dim db no-underline"> <img class="pv2" src="images/group-1.png" alt="group book"> <p class="ma0 light ttu gray f5 mt0 ">collaborative book</p></a></div>
-
-
-            <div class="pb3"><a href="leo.html" class="dim db no-underline"> <img class="pv2" src="images/leo2.png" alt="leo poster"> <p class="ma0 light ttu gray f5 mt0 ">climate change poster</p></a></div>
     </div>
 
 
 
-    <div class="flex-column w-60-ns w-100 pa3-ns">
-          <div class="pb3"><a href="pasta.html" class="dim db no-underline">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"><p class="ma0 light ttu gray f5 mt0 ">a poster of firsts</p></a></div>
+    <div class="flex flex-column w-60-ns w-100 pa3-ns justify-between">
+          <div class="pb4"><a href="pasta.html" class="dim db no-underline">  <img class="pv2" src="images/pasta-poster.png" alt="pasta poster"><p class="ma0 light ttu gray f5 mt0 ">a poster of firsts</p></a></div>
 
-  <div class="pb3 tc"><a href="lola.html" class="dim db no-underline"><img class="pv2" src="images/lola-sweatshirt.png" alt="lola website"><p class="tl ma0 light ttu gray f5 mt0 ">web design</p></a></div>
 
-                <div class="pb3"><a href="editorial.html" class="dim db no-underline"><img class="pv2" src="images/book-1.jpg" alt="book"><p class="ma0 light ttu gray f5 mt0 ">editorial design</p></a></div>
+          <div class="pb4"><a href="process.html" class="dim db no-underline">  <img class="pv2" src="images/process-book1.png" alt="processbook"><p class="ma0 light ttu gray f5 mt0 ">process book</p></a></div>
 
-                  <div class="pb3"><a href="mfa.html" class="dim db no-underline">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"><p class="ma0 light ttu gray f5 mt0 ">collaborative rebrand</p></a></div>
+              <div class="pb4"><a href="makers.html" class="dim db no-underline">  <img class="pv2" src="images/laser-cut-think.gif" alt="laser cut"><p class="ma0 light ttu gray f5 mt0 ">maker's lab</p></a></div>
+
+                <div class="pb4"><a href="editorial.html" class="dim db no-underline"><img class="pv2" src="images/book-1.jpg" alt="book"><p class="ma0 light ttu gray f5 mt0 ">editorial design</p></a></div>
+
+                  <div class="pb4"><a href="mfa.html" class="dim db no-underline">  <img class="pv2" src="images/mfa-1.jpg" alt="mfa branding"><p class="ma0 light ttu gray f5 mt0 ">collaborative rebrand</p></a></div>
+
+                <!--    <div class="pb3"><a href="collections.html" class="dim db no-underline">  <img class="pv2" src="images/collections1.png" alt="collections"><p class="ma0 light ttu gray f5 mt0 ">collections</p></a></div>-->
+
+
+
+
     </div>
 
 
