--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,14 @@
 
 
 
-    <!--HEADER/NAV-->
 
     <!--HEADER/NAV-->
 
-    <div class="pb0 flex flex-column">
+    <div class="pb5 flex flex-column">
 
         <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
-        <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+            <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
             <div><a href="index.html"> <img class="logo" src="images/logo-mint.png" alt="cb logo">
             </a></div>
@@ -42,30 +41,86 @@
             <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
         </div>
 
+      <div class="pb2">
+          <div class="tc items-center"> <h1 class="f3 black ma0 ttu tracked demi">Casey Bowser  </h1> </div>
+          <div class="tc items-center pt2"> <h2 class="f4 ma0 gray light">about me / contact</h2></div>
+
+
+      </div>
+    </div>
+
+
+<!--PHOTO INFO FLEX BOX -->
+
+  <div class="flex flex-row-ns flex-column ph6-l ph5-m ph4 pv5-ns pv4 bg-black-05">
+
+    <!--right column-->
+      <div class="w-40-ns tc tl-ns">
+          <img class="mw-100" src="images/photo-me5.png" alt="a photo of casey">
       </div>
 
-<!--MAIN-->
+    <!--left column-->
+      <div class="w-60-ns flex flex-column justify-between pl3-l pl4-m pt4 pt0-ns">
 
-<!--INTRO-->
+          <div><p class="f4-ns f5 ttu tracked demi mt0 mb0">background</p>
+          <div class=""><p class="f5 lh-copy book">Hi, my name is Casey and I am a graduate graphic design student at Boston University. Prior to starting this program, I worked in the nutrition field as a dietitian. While I appreciated the experience, I quickly realized that I was destined for a more creative career. Over the past year at BU, I have grown and developed my design skills and am really looking forward to my career as a graphic designer. I believe that my unique background will allow me to contribute a distinct perspective to each project that I am a part of.</p></div></div>
+
+            <div class="">
+              <p class="f4-ns f5 ttu tracked demi mb0">software / skills</p>
+
+              <div class="flex flex-row-ns">
+                  <ul class="pl0 list f5 lh-copy book w-50">
+                  <li>Photoshop</li>
+                  <li>Illustrator</li>
+                  <li>InDesign</li>
+                  <li>Premiere Pro</li>
+                  </ul>
+
+                  <ul class="pl0 list f5 lh-copy book w-50">
+                  <li>HTML/CSS</li>
+                  <li>UX/UI Design</li>
+                  <li>Web Design</li>
+                  <li>Microsoft Office</li>
+                  <li></li>
+                  </ul>
+              </div>
+            </div>
 
 
-<div class="ph6-ns ph4 flex flex-column pb4 tc">
-    <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">about me</span></h2>
-  <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book">Hi, my name is Casey and I am currently a graduate graphic design student at Boston University. Prior to starting this program, I worked as a dietitian. While I appreciated the experience and the profession, I quickly realized that it wasn't the job for me. I wanted to create, to build, to design - things I have always loved to do. After work, I began learning how to use design software and started to create more and more projects on my own. I was desperate for a change in my career and I knew that graphic design was what I wanted to do. Determined and enthusiastic, I decided to make the change. During my time as a design student, I have already gained many valuable skills that have made me a stronger designer. I am excited to continue to expand my knowledge and develop my skills. Thank you for visiting my portfolio! </p></div>
+            <div class="">
+              <p class="f4-ns f5 ttu tracked demi mb0">contact me</p>
+              <div class=""><p class="f5 pt1 lh-copy book"><a class="link black" href="mailto:caseybowser10@gmail.com">caseybowser10@gmail.com</a></p></div>
+            </div>
 
-
-  <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">contact me</span></h2>
-<div class="ph6-ns"><p class="f5 pt1 lh-copy tc ph4-ns book"><a class="link black" href="mailto:caseybowser10@gmail.com">caseybowser10@gmail.com</a></p></div>
-
-</div>
+      </div>
 
 
 
 
+  </div>
 
 
+<!--
+  <p class="f4-ns f5 ttu tracked demi mb0 ph6-ns ph4 pt3">Digital Illustrations</p>
+  <p class="f5 lh-copy book ph6-ns ph4">In addition to the graphic design projects I have created, I also enjoy making digital illustrations. Below are some examples of digital illustrations I have created for cards, gifts, etc. for past clients.</p>
 
 
+  <div class="flex flex-row-ns flex-column justify-around ph6-ns ph4">
+
+  <div class="w-50-ns ph3 charlie"><img class="" src="images/charlie-puth-01.png" alt=""></div>
+    <div class="w-50-ns ph3 timmy"><img class="" src="images/tim-gym.png" alt=""></div>
+
+
+  </div>
+
+  <div class="flex flex-row-ns flex-column justify-around ph6-ns ph4">
+
+  <div class="w-50-ns ph3 brycie"><img src="images/bryciebday-01.png" alt=""></div>
+    <div class="w-50-ns ph3 llama"><img src="images/llamaste-01.png" alt=""></div>
+
+    </div>
+
+-->
 
 <!-- Site JavaScript -->
 <script src="/javascript/toggleClass.js" charset="utf-8"></script>
