--- a/makers.html
+++ b/makers.html
@@ -51,7 +51,7 @@
 
 <div class="ph6-ns ph4 flex flex-column pb3 tc">
     <h2 class="f4-ns f5 ttu tracked demi"><span class="bb bw2">Maker's Lab</span></h2>
-    <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book tc">A series in experimentation. A series of projects that required the use of new materials and machines.  </p></div>
+    <div class="ph6-ns"><p class="f5 pt1 lh-copy tl ph4-ns book tc">A series in experimentation. Two projects that required the use of new materials and machines.  </p></div>
 </div>
 
 
@@ -86,7 +86,7 @@
     <div class="ph7-ns ph4 flex flex-column pv4-ns pb4">
         <h2 class="f4-ns f5 ttu tracked demi mb0"><span class="">2. Vinyl Cut</span></h2>
                 <h2 class="f5-ns f6 ttu tracked medium"><span class="">Theme: Social Media</span></h2>
-        <div class=""><p class="f5 pt1 lh-copy tl book">The next material we used was vinyl. The theme for this project was <span class="i">social media.</span> For this project, I combined the language of street signage with social media slang. I decided to combine the language of street signage with social media slang. Creating a recognizable, but odd combination of elements, I placed these vinyl stickers on hallway walls.  </p></div>
+        <div class=""><p class="f5 pt1 lh-copy tl book">For this project, I combined the language of street signage with social media slang. I decided to combine the language of street signage with social media slang. Creating a recognizable, but odd combination of elements, I placed these vinyl stickers on hallway walls.  </p></div>
     </div>
 
 
