--- a/mfa.html
+++ b/mfa.html
@@ -34,12 +34,12 @@
 
         <div class="flex flex-row-ns flex-column justify-around items-center pt5-ns pt1 ph5 pb3">
 
-            <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
+            <div class=""> <a class="no-underline link" href="index.html#work"><p class="link black ph3 pv3 pv0-ns f5 ttu tracked"><span class="home pa3 black medium">work</span></p></a></div>
 
             <div><a href="index.html"> <img class="logo" src="images/logo-black.png" alt="cb logo">
             </a></div>
 
-            <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f6 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
+            <div class=""> <a class="no-underline link" href="contact.html"><p class="link black ph3 pv3 pv0-ns f5 ttu tracked"><span class="contact pa3 black medium">info</span></p></a></div>
         </div>
 
       </div>
@@ -85,7 +85,7 @@
           <h3 class="ttu tracked f7 medium black"><span class="bb">back to work</span></h3></a>
           </div>
 
-          <div class=""><a class="link no-underline" href="leo.html">
+          <div class=""><a class="link no-underline" href="robot.html">
           <h3 class="ttu tracked f7 medium black"><span class="bb">next project</span></h3></a>
           </div>
         </div>
